--- a/header.css
+++ b/header.css
@@ -3,7 +3,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #0c004f;
+  background-color: #034876;
   padding: 20px;
   position: fixed; /* Фиксация шапки */
   top: 0;
