--- a/services.css
+++ b/services.css
@@ -189,7 +189,7 @@
     border-radius: 10px; /* Закругленные края */
     cursor: pointer;
     transition: background-color 0.4s ease, transform 0.4s ease, box-shadow 0.4s ease;
-    align-self: flex-end; /* Выровнять по левому краю карточки */
+    align-self: flex-end; /* Выровнять по правому краю карточки */
     z-index: 5;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2); /* Тень */
 }
